[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/areaOfEffect/AreaOfEffect.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="AreaOfEffect" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
